--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
-    "celery<5.0.0",
+    "celery",
     "gevent",
+    "redis>=7.1.0",
 ]
