--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
-    "celery",
+    "celery==5.6.1",
     "gevent",
     "redis>=7.1.0",
 ]
